--- a/src/app/dashboard/charts/chart.component.html
+++ b/src/app/dashboard/charts/chart.component.html
@@ -6,7 +6,7 @@
 			<ol class="breadcrumb">
 				<li><i class="fa fa-dashboard"></i> <a
 					href="Javascript:void(0)" routerLink="/dashboard/home">
-						Dashboard</a></li>
+						Dashboard1</a></li>
 				<li class="active"><i class="fa fa-fw fa-bar-chart-o"></i> High
 					Chart</li>
 			</ol>
